--- a/wpa_supplicant.conf
+++ b/wpa_supplicant.conf
@@ -5,6 +5,6 @@ ctrl_interface=/var/run/wpa_supplicant
 
 network={
  scan_ssid=1
- ssid="NBV"
- psk="FREITTA120#"
+ ssid="xavier"
+ psk="xaviertm"
 }
